--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ author: Xiaoyue Xi
 
 navbar-links:
   About Me: "aboutme"
+  Research: "research"
+  Teaching: "teaching"
 #   Resources:
 #     - Beautiful Jekyll: "https://beautifuljekyll.com"
 #     - Learn markdown: "https://www.markdowntutorial.com/"
